k8s/node-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-back-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: back-app
  template:
    metadata:
      labels:
        app: back-app
    spec:
      containers:
        - name: back-app
          image: afnarqui/servernodejs
---
apiVersion: v1
kind: Service
metadata:
  name: back-app-service
spec:
  type: NodePort
  selector:
    app: back-app
  ports:
    - port: 5000
      targetPort: 5000
