k8s/react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-front-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: front-app
  template:
    metadata:
      labels:
        app: front-app
    spec:
      containers:
        - name: front-app
          image: afnarqui/clientreact
---
apiVersion: v1
kind: Service
metadata:
  name: front-app-service
spec:
  type: NodePort
  selector:
    app: front-app
  ports:
    - port: 3000
      targetPort: 3000
