k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
# apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: react.afnarqui.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-app-service
                port:
                  number: 3000
    - host: back.afnarqui.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back-app-service
                port:
                  number: 5000
